--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -92,6 +92,100 @@ jobs:
           # 无论你想要对固件进行怎样的定制, 都需要且只需要修改 EOF 回环内的内容.
           # 
           # 编译x64固件:
+          # cat >> .config <<EOF
+          # CONFIG_TARGET_x86=y
+          # CONFIG_TARGET_x86_64=y
+          # CONFIG_TARGET_x86_64_DEVICE_generic=y
+          # CONFIG_BUSYBOX_CUSTOM=y
+          # CONFIG_BUSYBOX_CONFIG_FEATURE_CHECK_UNICODE_IN_ENV=y
+          # CONFIG_BUSYBOX_CONFIG_GETTY=y
+          # CONFIG_BUSYBOX_CONFIG_LAST_SUPPORTED_WCHAR=0
+          # CONFIG_BUSYBOX_CONFIG_SUBST_WCHAR=0
+          # CONFIG_BUSYBOX_CONFIG_UNICODE_SUPPORT=y
+          # CONFIG_LIBCURL_COOKIES=y
+          # CONFIG_LIBCURL_FILE=y
+          # CONFIG_LIBCURL_FTP=y
+          # CONFIG_LIBCURL_HTTP=y
+          # CONFIG_LIBCURL_MBEDTLS=y
+          # CONFIG_LIBCURL_NGHTTP2=y
+          # CONFIG_LIBCURL_NO_SMB="!"
+          # CONFIG_LIBCURL_PROXY=y
+          # CONFIG_LUA_ECO_DEFAULT_OPENSSL=y
+          # CONFIG_LUA_ECO_OPENSSL=y
+          # # CONFIG_LUA_ECO_WOLFSSL is not set
+          # CONFIG_OPENSSL_ENGINE=y
+          # CONFIG_OPENSSL_OPTIMIZE_SPEED=y
+          # CONFIG_OPENSSL_WITH_ASM=y
+          # CONFIG_OPENSSL_WITH_CHACHA_POLY1305=y
+          # CONFIG_OPENSSL_WITH_CMS=y
+          # CONFIG_OPENSSL_WITH_DEPRECATED=y
+          # CONFIG_OPENSSL_WITH_ERROR_MESSAGES=y
+          # CONFIG_OPENSSL_WITH_PSK=y
+          # CONFIG_OPENSSL_WITH_SRP=y
+          # CONFIG_OPENSSL_WITH_TLS13=y
+          # CONFIG_PACKAGE_bash=y
+          # CONFIG_PACKAGE_libbz2=y
+          # CONFIG_PACKAGE_libcap=y
+          # CONFIG_PACKAGE_libcurl=y
+          # CONFIG_PACKAGE_libffi=y
+          # CONFIG_PACKAGE_libgdbm=y
+          # CONFIG_PACKAGE_liblzma=y
+          # CONFIG_PACKAGE_libmbedtls=y
+          # CONFIG_PACKAGE_libncurses=y
+          # CONFIG_PACKAGE_libnghttp2=y
+          # CONFIG_PACKAGE_libopenssl=y
+          # CONFIG_PACKAGE_libpython3=y
+          # CONFIG_PACKAGE_libreadline=y
+          # CONFIG_PACKAGE_libsqlite3=y
+          # CONFIG_PACKAGE_libuv=y
+          # CONFIG_PACKAGE_libwebsockets-full=y
+          # CONFIG_PACKAGE_python-pip-conf=y
+          # CONFIG_PACKAGE_python3=y
+          # CONFIG_PACKAGE_python3-asyncio=y
+          # CONFIG_PACKAGE_python3-base=y
+          # CONFIG_PACKAGE_python3-certifi=y
+          # CONFIG_PACKAGE_python3-cgi=y
+          # CONFIG_PACKAGE_python3-cgitb=y
+          # CONFIG_PACKAGE_python3-chardet=y
+          # CONFIG_PACKAGE_python3-codecs=y
+          # CONFIG_PACKAGE_python3-ctypes=y
+          # CONFIG_PACKAGE_python3-curl=y
+          # CONFIG_PACKAGE_python3-dbm=y
+          # CONFIG_PACKAGE_python3-decimal=y
+          # CONFIG_PACKAGE_python3-distutils=y
+          # CONFIG_PACKAGE_python3-email=y
+          # CONFIG_PACKAGE_python3-idna=y
+          # CONFIG_PACKAGE_python3-light=y
+          # CONFIG_PACKAGE_python3-logging=y
+          # CONFIG_PACKAGE_python3-lzma=y
+          # CONFIG_PACKAGE_python3-multiprocessing=y
+          # CONFIG_PACKAGE_python3-ncurses=y
+          # CONFIG_PACKAGE_python3-openssl=y
+          # CONFIG_PACKAGE_python3-pip=y
+          # CONFIG_PACKAGE_python3-pkg-resources=y
+          # CONFIG_PACKAGE_python3-pydoc=y
+          # CONFIG_PACKAGE_python3-readline=y
+          # CONFIG_PACKAGE_python3-requests=y
+          # CONFIG_PACKAGE_python3-setuptools=y
+          # CONFIG_PACKAGE_python3-sqlite3=y
+          # CONFIG_PACKAGE_python3-unittest=y
+          # CONFIG_PACKAGE_python3-urllib=y
+          # CONFIG_PACKAGE_python3-urllib3=y
+          # CONFIG_PACKAGE_python3-uuid=y
+          # CONFIG_PACKAGE_python3-xml=y
+          # CONFIG_PACKAGE_terminfo=y
+          # CONFIG_PACKAGE_ttyd=y
+          # CONFIG_PACKAGE_zlib=y
+          # CONFIG_SQLITE3_COLUMN_METADATA=y
+          # CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
+          # CONFIG_SQLITE3_FTS3=y
+          # CONFIG_SQLITE3_FTS4=y
+          # CONFIG_SQLITE3_FTS5=y
+          # CONFIG_SQLITE3_JSON1=y
+          # CONFIG_SQLITE3_RTREE=y
+          # CONFIG_TARGET_KERNEL_PARTSIZE=256
+          # CONFIG_TARGET_ROOTFS_PARTSIZE=512
+          # EOF
           cat >> .config <<EOF
           CONFIG_TARGET_x86=y
           CONFIG_TARGET_x86_64=y
@@ -123,12 +217,20 @@ jobs:
           CONFIG_OPENSSL_WITH_PSK=y
           CONFIG_OPENSSL_WITH_SRP=y
           CONFIG_OPENSSL_WITH_TLS13=y
+          CONFIG_PACKAGE_attendedsysupgrade-common=y
           CONFIG_PACKAGE_bash=y
+          CONFIG_PACKAGE_cgi-io=y
           CONFIG_PACKAGE_libbz2=y
           CONFIG_PACKAGE_libcap=y
           CONFIG_PACKAGE_libcurl=y
           CONFIG_PACKAGE_libffi=y
           CONFIG_PACKAGE_libgdbm=y
+          CONFIG_PACKAGE_libiwinfo=y
+          CONFIG_PACKAGE_libiwinfo-data=y
+          CONFIG_PACKAGE_liblua=y
+          CONFIG_PACKAGE_liblucihttp=y
+          CONFIG_PACKAGE_liblucihttp-lua=y
+          CONFIG_PACKAGE_liblucihttp-ucode=y
           CONFIG_PACKAGE_liblzma=y
           CONFIG_PACKAGE_libmbedtls=y
           CONFIG_PACKAGE_libncurses=y
@@ -139,6 +241,23 @@ jobs:
           CONFIG_PACKAGE_libsqlite3=y
           CONFIG_PACKAGE_libuv=y
           CONFIG_PACKAGE_libwebsockets-full=y
+          CONFIG_PACKAGE_lua=y
+          CONFIG_PACKAGE_luci=y
+          CONFIG_PACKAGE_luci-app-attendedsysupgrade=y
+          CONFIG_PACKAGE_luci-app-firewall=y
+          CONFIG_PACKAGE_luci-app-opkg=y
+          CONFIG_PACKAGE_luci-base=y
+          CONFIG_PACKAGE_luci-lib-base=y
+          CONFIG_PACKAGE_luci-lib-ip=y
+          CONFIG_PACKAGE_luci-lib-jsonc=y
+          CONFIG_PACKAGE_luci-lib-nixio=y
+          CONFIG_PACKAGE_luci-mod-admin-full=y
+          CONFIG_PACKAGE_luci-mod-network=y
+          CONFIG_PACKAGE_luci-mod-status=y
+          CONFIG_PACKAGE_luci-mod-system=y
+          CONFIG_PACKAGE_luci-proto-ipv6=y
+          CONFIG_PACKAGE_luci-proto-ppp=y
+          CONFIG_PACKAGE_luci-theme-bootstrap=y
           CONFIG_PACKAGE_python-pip-conf=y
           CONFIG_PACKAGE_python3=y
           CONFIG_PACKAGE_python3-asyncio=y
@@ -173,8 +292,19 @@ jobs:
           CONFIG_PACKAGE_python3-urllib3=y
           CONFIG_PACKAGE_python3-uuid=y
           CONFIG_PACKAGE_python3-xml=y
+          CONFIG_PACKAGE_rpcd=y
+          CONFIG_PACKAGE_rpcd-mod-file=y
+          CONFIG_PACKAGE_rpcd-mod-iwinfo=y
+          CONFIG_PACKAGE_rpcd-mod-luci=y
+          CONFIG_PACKAGE_rpcd-mod-rpcsys=y
+          CONFIG_PACKAGE_rpcd-mod-rrdns=y
+          CONFIG_PACKAGE_rpcd-mod-ucode=y
           CONFIG_PACKAGE_terminfo=y
           CONFIG_PACKAGE_ttyd=y
+          CONFIG_PACKAGE_ucode-mod-html=y
+          CONFIG_PACKAGE_ucode-mod-math=y
+          CONFIG_PACKAGE_uhttpd=y
+          CONFIG_PACKAGE_uhttpd-mod-ubus=y
           CONFIG_PACKAGE_zlib=y
           CONFIG_SQLITE3_COLUMN_METADATA=y
           CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
@@ -186,7 +316,6 @@ jobs:
           CONFIG_TARGET_KERNEL_PARTSIZE=256
           CONFIG_TARGET_ROOTFS_PARTSIZE=512
           EOF
-
           # cat >> .config <<EOF
           # CONFIG_TARGET_x86=y
           # CONFIG_TARGET_x86_64=y
